# yaml2prop

./: LICENSE  README.md  pyproject.toml
y2p/: cli.py
